--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -30,7 +30,7 @@
     }
 
     .error {
-        color: red;
+        color: rgb(21, 0, 255);
         text-align: center;
         margin-bottom: 15px;
     }
